# Version 0.23

## New Features

- Added busyindicators to image to show when the image is loading -- kaneryu on 2025-02-21



# Version 0.22

## New Features

- add song image provider, to start moving away from KImage (#4) -- kaneryu on 2025-02-20



# Version 0.21

## New Features

- assosiate song kimages with songs #3 -- kaneryu on 2025-02-18



# Version 0.20

## New Features

- Add font files to the application with a test on the homepage -- kaneryu on 2025-01-25

## Bugfixes

- bug in cacheManager that didn't use asyncio.lock on deleting a key, and also integrity check having incorrect implementation. -- kaneryu on 2025-02-02
- fix bug in cachemanger caused by using async lock in non-async functions -- kaneryu on 2025-02-02
- fix bug in workers that didn't call the callback if using putcoverconvert, and fix bug that didn't convert coverconvert key into path before returing it to the UI -- kaneryu on 2025-02-02
- fix bug where non-rounded cover would be returned when retrieveing cover from cache -- kaneryu on 2025-02-02
- fix bug in kimage that wouldn't initialize a variable before downlading the image -- kaneryu on 2025-02-03
- fix bug in song where playback info was never downloaded in the first place -- kaneryu on 2025-02-03
- fix various bugs in cacheManager, while working on the Song tile -- kaneryu on 2025-02-17
- fix bug where status wasn't updated when fetching image from cache -- kaneryu on 2025-02-17



# Version 0.19

## New Features

- Add functionality to the queueview -- kaneryu on 2025-01-23

## Bugfixes

- fix title in queue, fix overlapping issue in song results -- kaneryu on 2025-01-23
- fix bug where seeking would cause the play button to show buffering indef -- kaneryu on 2025-01-24
- song duration not updating -- kaneryu on 2025-01-24



# Version 0.18

## New Features

- Add prerequisite for queuePanel -- kaneryu on 2025-01-23



# Version 0.17

## New Features
