@@ -3,3 +3,7 @@
 ## New Features
 
 - Added busyindicators to image to show when the image is loading -- kaneryu on 2025-02-21
+
+## Bugfixes
+
+- fixed a few startup bugs, made queueview use the Song object -- kaneryu on 2025-02-21
