@@ -15,12 +15,22 @@
 # nuitka-project: --copyright="This is free and open-source software -- GNU GPL v3"
 # nuitka-project: --windows-product-name="InnerTuneDesktop"
 
-# nuitka-project: --product-version=0.23.0
-# nuitka-project: --file-version=0.23.0
+# nuitka-project: --product-version=0.23.1
+# nuitka-project: --file-version=0.23.1
 
 # nuitka-project: --output-filename=InnerTuneDesktop
 # disabled: --disable-console
 # nuitka-project: --user-package-configuration-file=./nuitka-fix.config.yml 
+
+# STARTUP FLOW
+
+# from run.py
+# setup workers
+# setup cache
+# setup universal
+# setup queue
+# setup app
+# run app
 
 import src.universal
 from src.app import main
