@@ -4,6 +4,10 @@
 
 - Added busyindicators to image to show when the image is loading -- kaneryu on 2025-02-21
 
+## Bugfixes
+
+- fixed a few startup bugs, made queueview use the Song object -- kaneryu on 2025-02-21
+
 
 
 # Version 0.22
